--- a/Lesson3_Highlights/css/one-page-wonder.css
+++ b/Lesson3_Highlights/css/one-page-wonder.css
@@ -12,7 +12,7 @@ body {
     display: block;
     width: 100%;
     text-align: center;
-    background: url('http://placehold.it/1900x500') no-repeat center center scroll;
+    background: url('https://cdn-images-1.medium.com/max/2000/1*e-tlWqLwbUd1UmZyC_KbGg.png') no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
